--- a/Kidsgame.html
+++ b/Kidsgame.html
@@ -13,13 +13,14 @@
     
     <div class='contentContainer'>
         <select>
+            <option value='' disabled selected>Choose Game</option>
             <option value='shapes'>Shapes</option>
             <option value='numbers'>Numbers</option>
             <option value='colors'>Colors</option>
         </select>
-        <div class='displayArea'>
+        <div id='displayArea'>
             <div id='gameDisplay' class="defaultDisplay"></div>
-            <h1 id='correctAnswers'></h1>
+            <h1 id='correctAnswers' class='answer'></h1>
         </div>
         <div class='buttonArea'>
             <button id='startButton' class='gameButton' >Start</button>
